--- a/00/index.html
+++ b/00/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Keiのページ</title>
+        <title>Keiのブログ | HOME</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>Keiがはじめて公開したページ</h1>
-        <p>これはTestです</p>
+        <p>このページはKeiが初めて公開し,記念すべき1ページ目となったページです</p>
+        <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
     </body>
 </html>
