--- a/00/index.html
+++ b/00/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Keiのブログ | HOME</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" herf="../style.css">
     </head>
     <body>
         <h1>Keiがはじめて公開したページ</h1>
