--- a/00/index.html
+++ b/00/index.html
@@ -9,5 +9,7 @@
         <h1>Keiがはじめて公開したページ</h1>
         <p>このページはKeiが初めて公開し,記念すべき1ページ目となったページです</p>
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
+        <div class="code">
+            <p>#include&lt;stdio.h&gt;</p>
     </body>
 </html>
