--- a/00/index.html
+++ b/00/index.html
@@ -11,5 +11,6 @@
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
         <div class="code">
             <p>#include&lt;stdio.h&gt;</p>
+        </div>
     </body>
 </html>
