--- a/00/index.html
+++ b/00/index.html
@@ -11,6 +11,7 @@
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
         <div class="code">
             <p>#include&lt;stdio.h&gt;</p>
+            <p>int main&lpar;&rpar;&lbrace;printf&lpar;&rpar;&semi;&rbrace;</p>
         </div>
     </body>
 </html>
