--- a/00/index.html
+++ b/00/index.html
@@ -4,6 +4,7 @@
         <title>Keiのブログ | HOME</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
+        <script src="../library.js"></script>
     </head>
     <body>
         <h1>Keiがはじめて公開したページ</h1>
