--- a/00/index.html
+++ b/00/index.html
@@ -12,7 +12,7 @@
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
         <div class="code">
             <p>#include&lt;stdio.h&gt;</p>
-            <p>int main&lpar;&rpar;<br>&lbrace;printf&lpar;&rpar;&semi;<br>&rbrace;</p>
+            <p>int main&lpar;&rpar;<br>&lbrace;<br>printf&lpar;&rpar;&semi;<br>&rbrace;</p>
         </div>
     </body>
 </html>
