--- a/00/index.html
+++ b/00/index.html
@@ -4,9 +4,10 @@
         <title>Keiのブログ | HOME</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
-        <script src="../library.js"></script>
+        <script src="../background.js"></script>
     </head>
     <body>
+        <script src="../foreground.js"></script>
         <h1>Keiがはじめて公開したページ</h1>
         <p>このページはKeiが初めて公開し,記念すべき1ページ目となったページです</p>
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
