--- a/00/index.html
+++ b/00/index.html
@@ -15,5 +15,8 @@
             <p>#include&lt;stdio.h&gt;</p>
             <p>int main&lpar;&rpar;<br>&lbrace;<br>printf&lpar;&rpar;&semi;<br>&rbrace;</p>
         </div>
+        <div class="code">
+            <p>test</p>
+        </div>
     </body>
 </html>
