--- a/00/index.html
+++ b/00/index.html
@@ -15,6 +15,7 @@
             <p>#include&lt;stdio.h&gt;</p>
             <p>int main&lpar;&rpar;<br>&lbrace;<br>printf&lpar;&rpar;&semi;<br>&rbrace;</p>
         </div>
+        <p>こちらも</p>
         <div class="code">
             <p>test</p>
         </div>
