--- a/00/index.html
+++ b/00/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <h1>Keiがはじめて公開したページ</h1>
+        <h1 style="background : #ffd700 ">Keiがはじめて公開したページ</h1>
         <p>このページはKeiが初めて公開し,記念すべき1ページ目となったページです</p>
         <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
         <div class="code">
