--- a/00/index.html
+++ b/00/index.html
@@ -8,8 +8,11 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <h1 style="background : #ffd700 ">Keiがはじめて公開したページ</h1>
-        <p>このページはKeiが初めて公開し,記念すべき1ページ目となったページです</p>
-        <p>Keiが公開するブログのHOMEとなり,Keiにとっても思い出の深い,そんな一ページになるよう頑張っていきます.</p>
+        <h1>Keiのブログ | HOME</h1>
+        <p>このページはKeiが初めてインターネットに公開したブログであり、</p>
+        <p>これから作られてくKeiのブログの総本山であり</p>
+        <p>それらのページのHOMEとなるものである</p>
+        <p><br></p>
+        <p>...なんてことを書いてみているR6年度11月9日の管理人"Kei"です。</p>
     </body>
 </html>
