--- a/00/index.html
+++ b/00/index.html
@@ -5,6 +5,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
         <script src="../background.js"></script>
+        <style>
+            #introduction { TEXT-ALIGN : center ; background : #000000 }
+        </style>
     </head>
     <body>
         <script src="../foreground.js"></script>
@@ -14,5 +17,7 @@
         <p>それらのページのHOMEとなるものである</p>
         <p><br></p>
         <p>...なんてことを書いてみているR6年度11月9日の管理人"Kei"です。</p>
+        <div id="introduction">
+        </div>
     </body>
 </html>
