--- a/00/index.html
+++ b/00/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../style.css">
         <script src="../background.js"></script>
         <style>
-            #introduction { TEXT-ALIGN : center ; background : #000000 }
+            #introduction { TEXT-ALIGN : center ; background : #fff }
         </style>
     </head>
     <body>
