--- a/00/index.html
+++ b/00/index.html
@@ -16,8 +16,12 @@
         <p>これから作られてKeiのブログの<span class="strong">総本山</span>であり</p>
         <p>それらのページの<span class="strong">HOME</span>となるものである</p>
         <p><br></p>
-        <p>...なんてことを書いてみているR6年度11月9日の管理人"Kei"です。</p>
+        <p>...なんてことを書いてみているR6年度11月9日の運営"Kei"です。</p>
         <div id="introduction">
+            <h3>運営 "Kei" 紹介</h3>
+            <h5>職業 : 中学生</h5>
+            <h5>好きなもの : PC</h5>
+            <h5>それ以外 : ヒ・ミ・ツ</h5>
         </div>
     </body>
 </html>
