--- a/00/index.html
+++ b/00/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../style.css">
         <script src="../background.js"></script>
         <style>
+            body { background : #ffd }
             #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
         </style>
     </head>
