--- a/00/index.html
+++ b/00/index.html
@@ -24,5 +24,9 @@
             <h5>好きなもの : パソコン</h5>
             <h5>それ以外 : ヒ・ミ・ツ</h5>
         </div>
+        <p><br></p>
+        <p>...でなんのために書くかというと<br></p>
+        <p>・自分の勉強の備忘録のため</p>
+        <p>・HTML,CSS,JavaScriptの技術を学ぶため</p>
     </body>
 </html>
