--- a/00/index.html
+++ b/00/index.html
@@ -14,7 +14,7 @@
         <script src="../foreground.js"></script>
         <h1>Keiのブログ | HOME</h1>
         <p>このページはKeiが初めてインターネットに公開したブログであり、</p>
-        <p>これから作られてKeiのブログの<span class="strong">総本山</span>であり</p>
+        <p>これから作られていくKeiのブログの<span class="strong">総本山</span>であり</p>
         <p>それらのページの<span class="strong">HOME</span>となるものである</p>
         <p><br></p>
         <p>...なんてことを書いてみているR6年度11月9日の運営者"Kei"です。</p>
