--- a/00/index.html
+++ b/00/index.html
@@ -20,7 +20,7 @@
         <p>...なんてことを書いてみているR6年度11月9日の運営者"Kei"です。</p>
         <div id="introduction">
             <h3>運営者 "Kei" 紹介</h3>
-            <h5>職業 : 中学一年生</h5>
+            <h5>ニックネーム : Kei</h5>
             <h5>好きなもの : パソコン</h5>
             <h5>それ以外 : 黙秘</h5>
         </div>
