--- a/00/index.html
+++ b/00/index.html
@@ -25,10 +25,10 @@
             <h5>それ以外 : 黙秘</h5>
         </div>
         <p><br></p>
-        <p>...でなんのために書くかというと<br></p>
-        <p>・自分の勉強の備忘録のため</p>
-        <p>・HTML,CSS,JavaScriptの技術を学ぶため<br></p>
-        <p>はっきり言って、自分しか読まないと思うけど、</p>
+        <p>...でなんのために書くかというと</p>
+        <p><br>・自分の勉強の備忘録のため</p>
+        <p>・HTML,CSS,JavaScriptの技術を学ぶため</p>
+        <p><br>はっきり言って、自分しか読まないと思うけど、</p>
         <p>自分自身のスキルアップのためにがんばります</p>
         <p>頑張れ、"Kei"!!</p>
     </body>
