--- a/00/index.html
+++ b/00/index.html
@@ -22,7 +22,7 @@
             <h3>運営者 "Kei" 紹介</h3>
             <h5>ニックネーム : Kei</h5>
             <h5>好きなもの : パソコン</h5>
-            <h5>それ以外 : 黙秘</h5>
+            <h5>それ以外 : 秘密</h5>
         </div>
         <p><br></p>
         <p>...でなんのために書くかというと</p>
