--- a/01/index.html
+++ b/01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>[中１数学]自分的備忘ログ-A | Keiブログ</title>
+    <title>[中１数学]自分的備忘ログ-1</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../background.js"></script>
     <style>
