--- a/01/index.html
+++ b/01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>[中１数学]自分的備忘ログ-1</title>
+    <title>自分的備忘ログ-1</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../background.js"></script>
     <style>
@@ -10,6 +10,10 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <h1>[中１数学]自分的備忘ログ No.1 | Keiブログ</h1>
+    <h1>自分的備忘ログ No.1 | Keiブログ</h1>
+    <p>Keiブログ1ページ目として選んだものは中１の数学</p>
+    <p>今やっているその前の単元である一次方程式の解き方を</p>
+    <p>2学期期末テストに向けて記録として残しておこう</p>
+    <p><br>...と思ったのがこの記事の起こりですかね</p>
   </body>
 </html>
