--- a/00/index.html
+++ b/00/index.html
@@ -31,5 +31,7 @@
         <p><br>はっきり言って、自分しか読まないと思うけど、</p>
         <p>自分自身のスキルアップのためにがんばります</p>
         <p>頑張れ、"Kei"!!</p>
+        <p><br><br>...ま、がんばります</p>
+        <h2>記事一覧</h2>
     </body>
 </html>
