--- a/01/index.html
+++ b/01/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>自分的備忘ログ-1</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
     <style>
     </style>
