--- a/01/index.html
+++ b/01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>自分的備忘ログ-1</title>
+    <title>自分的備忘録-1</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
