--- a/00/index.html
+++ b/00/index.html
@@ -34,6 +34,6 @@
         <p>頑張れ、"Kei"!!</p>
         <p><br><br>...ま、がんばります</p>
         <h1>記事一覧</h1>
-        <a href="https://kei-glasses.github.io/HtML/01">自分的備忘録-1</a>
+        <a href="https://kei-glasses.github.io/HTML/01">自分的備忘録-1</a>
     </body>
 </html>
