--- a/00/index.html
+++ b/00/index.html
@@ -21,14 +21,19 @@
         <p>...なんてことを書いてみているR6年度11月9日の運営者"Kei"です。</p>
         <div id="introduction">
             <h3>運営者 "Kei" 紹介</h3>
-            <h5>ニックネーム : Kei</h5>
-            <h5>好きなもの : パソコン</h5>
-            <h5>それ以外 : 秘密</h5>
+            <ul>
+                <li>ニックネーム: Kei</li>
+                <li>好きなもの  : パソコン</li>
+                <li>それ以外   : 秘密</li>
+            </ul>
         </div>
         <p><br></p>
         <p>...でなんのために書くかというと</p>
         <p><br>・自分の勉強の備忘録のため</p>
         <p>・HTML,CSS,JavaScriptの技術を学ぶため</p>
+        <p>タイピングの精度を高めるため</p>
+        <p>タイピングを早くするため</p>
+        <p>ブラインドタッチができるようになるため</p>
         <p><br>はっきり言って、自分しか読まないと思うけど、</p>
         <p>自分自身のスキルアップのためにがんばります</p>
         <p>頑張れ、"Kei"!!</p>
