--- a/01/index.html
+++ b/01/index.html
@@ -16,5 +16,14 @@
     <p>今やっているその前の単元である一次方程式の解き方を</p>
     <p>2学期期末テストに向けて記録として残しておこう</p>
     <p><br>...と思ったのがこの記事の起こりですかね</p>
+    <p>と、いうわけでまずは一次方程式の例を自分なりにまとめます</p>
+    <div class="code">
+      <p>7x + 6  = 9x - 16</p>
+      <p>7x - 9x = -6 - 16</p>
+      <p>   -2x  = -22 </p>
+      <p>    x   = 11</p>
+    </div>
+    <p>この方程式は解き方がわかっていればかんたんなのですが、</p>
+    <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
   </body>
 </html>
