--- a/00/index.html
+++ b/00/index.html
@@ -21,11 +21,9 @@
         <p>...なんてことを書いてみているR6年度11月9日の運営者"Kei"です。</p>
         <div id="introduction">
             <h3>運営者 "Kei" 紹介</h3>
-            <ul>
-                <li>ニックネーム: Kei</li>
-                <li>好きなもの  : パソコン</li>
-                <li>それ以外   : 秘密</li>
-            </ul>
+            <p>ニックネーム: Kei</p>
+            <p>好きなもの  : パソコン</p>
+            <p>それ以外   : 秘密</p>
         </div>
         <p><br></p>
         <p>...でなんのために書くかというと</p>
