--- a/00/index.html
+++ b/00/index.html
@@ -29,9 +29,9 @@
         <p>...でなんのために書くかというと</p>
         <p><br>・自分の勉強の備忘録のため</p>
         <p>・HTML,CSS,JavaScriptの技術を学ぶため</p>
-        <p>タイピングの精度を高めるため</p>
-        <p>タイピングを早くするため</p>
-        <p>ブラインドタッチができるようになるため</p>
+        <p>・タイピングの精度を高めるため</p>
+        <p>・タイピングを早くするため</p>
+        <p>・ブラインドタッチができるようになるため</p>
         <p><br>はっきり言って、自分しか読まないと思うけど、</p>
         <p>自分自身のスキルアップのためにがんばります</p>
         <p>頑張れ、"Kei"!!</p>
