--- a/01/index.html
+++ b/01/index.html
@@ -20,8 +20,8 @@
     <div class="code">
       <p>7x&nbsp;+&nbsp;6&nbsp;&nbsp;=&nbsp;9x&nbsp;-&nbsp;16</p>
       <p>7x&nbsp;-&nbsp;9x&nbsp;=&nbsp;-6&nbsp;-&nbsp;16</p>
-      <p>&nbsp;&nbsp;&nbsp;-2x&nbsp;&nbsp;=&nbsp;-22 </p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;=&nbsp;11</p>
+      <p>&nbsp;&nbsp;&nbsp;-2x&nbsp;&nbsp;&nbsp;=&nbsp;-22 </p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;11</p>
     </div>
     <p>この方程式は解き方がわかっていればかんたんなのですが、</p>
     <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
