--- a/01/index.html
+++ b/01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>自分的備忘録-1</title>
+    <title>自分的備忘録-1[数学]</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
@@ -18,12 +18,13 @@
     <p><br>...と思ったのがこの記事の起こりですかね</p>
     <p>と、いうわけでまずは一次方程式の例を自分なりにまとめます</p>
     <div class="code">
-      <p>7x+6=9x16</p>
-      <p>7x-9x=-616</p>
-      <p>-2x=-22 </p>
-      <p>x=11</p>
+      <p>7x+6&#160;&#160;=&#160;9x-16</p>
+      <p>7x-9x&#160;=&#160;-6-16</p>
+      <p>&#160;-2x&#160;=&#160;-22 </p>
+      <p>&#160;x&#160;=&#160;11</p>
     </div>
-    <p>この方程式は解き方がわかっていればかんたんなのですが、</p>
+    <p>この方程式は解き方がわかっていれば簡単なのですが、</p>
     <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
+    <p></p>
   </body>
 </html>
