--- a/01/index.html
+++ b/01/index.html
@@ -25,6 +25,13 @@
     </div>
     <p>この方程式は解き方がわかっていれば簡単なのですが、</p>
     <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
-    <p></p>
+    <h3>7x , 9x</h3>
+    <p><br>まずは、最初の「7x」「9x」。</p>
+    <p>これは、それぞれ「7 * x」「9 * x」のことを表しています。</p>
+    <p>文字を使った項では</p>
+    <p>・掛け算は×を書かずに、数字とくっつける</p>
+    <p>・割り算は÷を書かずに、分数で表す</p>
+    <p>という、ルールがあります。</p>
+    <p>なので×を省略して、7x , 9xのように表します。  </p>
   </body>
 </html>
