--- a/01/index.html
+++ b/01/index.html
@@ -27,7 +27,7 @@
     <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
     <h3>7x , 9x</h3>
     <p><br>まずは、最初の「7x」「9x」。</p>
-    <p>これは、それぞれ「7 * x」「9 * x」のことを表しています。</p>
+    <p>これは、それぞれ「7 × x」「9 × x」のことを表しています。</p>
     <p>文字を使った項では</p>
     <p>・掛け算は×を書かずに、数字とくっつける</p>
     <p>・割り算は÷を書かずに、分数で表す</p>
