--- a/01/index.html
+++ b/01/index.html
@@ -33,5 +33,20 @@
     <p>・割り算は÷を書かずに、分数で表す</p>
     <p>という、ルールがあります。</p>
     <p>なので×を省略して、7x , 9xのように表します。  </p>
+    <h3>移項</h3>
+    <p>一行目の「7x + 6 = 9x - 16」と、</p>
+    <p>二行目の「7x -9x = -6 -16」を比べてみましょう。</p>
+    <div class="code">
+      <p>7x + 6 = 9x -16</p>
+      <p>7x -9x = 16 -16<p>
+    </div>
+    <p>一見、違う式に見えますが、実は同じ式です。</p>
+    <p>こうしてみるとわかるかもしれません。</p>
+    <div class="code">
+      <p>7x + 6 = 9x -16</p>
+      <p>7x + 6 <span class="strong"> -6  </span>= 9x -16 <span class="strong">-6</span></p>
+      <p>7x = 9x -16 -6</p>
+      <p>7x <span class="strong">-9x</span> = 9x <span class="strong">-9x</span> -16 -6</p>
+    </div>
   </body>
 </html>
