--- a/01/index.html
+++ b/01/index.html
@@ -48,5 +48,18 @@
       <p>7x = 9x -16 -6</p>
       <p>7x <span class="strong">-9x</span> = 9x <span class="strong">-9x</span> -16 -6</p>
     </div>
+    <p>赤の部分は上の一行目と二行目の間で起こったことをわかりやすくするためです。</p>
+    <p>「7x + 6 = 9x -16」の両辺の間には「=」があります。</p>
+    <p>つまりこれは、「7x +6」と「9x -16」が等しいことを表します。</p>
+    <p>両辺が等しいのであれば、両辺を、</p>
+    <p>・同じ数を足す</p>
+    <p>・同じ数を引く</p>
+    <p>・同じ数を掛ける</p>
+    <p>・0ではない同じ数で割る</p>
+    <p>ことをしても等式の関係は崩れません。</p>
+    <p>そこで、二行目では両辺に-6して、左辺の6を相殺し、</p>
+    <p>四行目では両辺に-9xして、右辺の9xを相殺しています。</p>
+    <p>すると反対側の辺では符号を逆にした数があることになり、</p>
+    <p>符号を変えて、辺を移動したと捉えることができます。</p>
   </body>
 </html>
