--- a/01/index.html
+++ b/01/index.html
@@ -51,7 +51,7 @@
     </div>
     <p>「7x + 6 = 9x -16」の両辺の間には「=」があります。</p>
     <p>つまりこれは、「7x +6」と「9x -16」が等しいことを表します。</p>
-    <p>両辺が等しいのであれば、両辺を、</p>
+    <p>両辺が等しいのであれば、両辺に、</p>
     <p>・同じ数を足す</p>
     <p>・同じ数を引く</p>
     <p>・同じ数を掛ける</p>
