--- a/01/index.html
+++ b/01/index.html
@@ -56,7 +56,7 @@
     <p>・同じ数を引く</p>
     <p>・同じ数を掛ける</p>
     <p>・0ではない同じ数で割る</p>
-    <p>ことをしても等式の関係は崩れません。</p>
+    <p>しても等式の関係は崩れません。</p>
     <p>そこで、二行目では両辺に-6して、左辺の6を相殺し、</p>
     <p>四行目では両辺に-9xして、右辺の9xを相殺しています。</p>
     <p>すると反対側の辺では符号を逆にした数があることになり、</p>
