--- a/01/index.html
+++ b/01/index.html
@@ -61,5 +61,12 @@
     <p>四行目では両辺に-9xして、右辺の9xを相殺しています。</p>
     <p>すると反対側の辺では符号を逆にした数があることになり、</p>
     <p>符号を変えて、辺を移動したと捉えることができます。</p>
+    <p>つまり、項は、符号を変えて、反対側の辺に行くことができるのです。</p>
+    <p>では改めて、次の式を見てみましょう。</p>
+    <div class="code">
+      <p>7x + 6 = 9x -16</p>
+      <p>7x -9x = -6 -16<p>
+    </div>
+    <p>何をしているのかが分かったと思います。</p>
   </body>
 </html>
