--- a/01/index.html
+++ b/01/index.html
@@ -68,5 +68,23 @@
       <p>7x -9x = -6 -16<p>
     </div>
     <p>何をしているのかが分かったと思います。</p>
+    <h3>文字の項、数の項</h3>
+    <p>前の章で「7x -9x = -6-16」のところまでたどり着けました。</p>
+    <p>この等式の中の項は「7x」「-9x」「-6」「-16」です。</p>
+    <p>文字と係数がある項は、「文字の項」、</p>
+    <p>数字のみの項は、「数の項」といいます。</p>
+    <p>文字の項同士の足し算は、文字が同じ項同士、係数を足すことで計算できます。</p>
+    <div class="code">
+      <p> 7x + 3x = 10x</p>
+    </div>
+    <p>数の項はご存知だと思うのでここでは、割愛いたします。</p>
+    <p>左辺では、文字の項だけなので、計算できます。</p>
+    <div class="code">
+      <p>7x -9x = -2x</p>
+    </div>
+    <p><br>右辺では、数の項だけなので、ここも計算できます。</p>
+    <div class="code">
+      <p>-6 -16 = -22</p>
+    </div>
   </body>
 </html>
