--- a/01/index.html
+++ b/01/index.html
@@ -78,7 +78,10 @@
     <div class="code">
       <p> 7x + 3x = 10x</p>
     </div>
-    <p>数の項はご存知だと思うのでここでは、割愛いたします。</p>
+    <p>数の項は数を足せばいいのです。</p>
+    <div class="code">
+      <p> 7 + 3 = 10</p>
+    </div>
     <p>左辺では、文字の項だけなので、計算できます。</p>
     <div class="code">
       <p>7x -9x = -2x</p>
