--- a/01/index.html
+++ b/01/index.html
@@ -86,7 +86,7 @@
     <div class="code">
       <p>7x -9x = -2x</p>
     </div>
-    <p><br>右辺では、数の項だけなので、ここも計算できます。</p>
+    <p>右辺では、数の項だけなので、ここも計算できます。</p>
     <div class="code">
       <p>-6 -16 = -22</p>
     </div>
