--- a/00/index.html
+++ b/00/index.html
@@ -13,14 +13,19 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <h1>Keiのブログ | HOME</h1>
+        <h1 id="a">Keiのブログ | HOME</h1>
+        <div id="table">
+            <a href="#a">・Keiブログとは</a>
+            <a href="#b">・運営者紹介</a>
+            <a href="#c">・記事一覧</a>
+        </div>
         <p>このページはKeiが初めてインターネットに公開したブログであり、</p>
         <p>これから作られていくKeiのブログの<span class="strong">総本山</span>であり</p>
         <p>それらのページの<span class="strong">HOME</span>となるものである</p>
         <p><br></p>
         <p>...なんてことを書いてみているR6年度11月9日の運営者"Kei"です。</p>
         <div id="introduction">
-            <h3>運営者 "Kei" 紹介</h3>
+            <h3 id="b">運営者 "Kei" 紹介</h3>
             <p>ニックネーム: Kei</p>
             <p>好きなもの  : パソコン</p>
             <p>それ以外   : 秘密</p>
@@ -36,7 +41,7 @@
         <p>自分自身のスキルアップのためにがんばります</p>
         <p>頑張れ、"Kei"!!</p>
         <p><br><br>...ま、がんばります</p>
-        <h1>記事一覧</h1>
+        <h1 id="c">記事一覧</h1>
         <a href="https://kei-glasses.github.io/HTML/01">自分的備忘録-1</a>
     </body>
 </html>
