--- a/00/index.html
+++ b/00/index.html
@@ -13,12 +13,13 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <h1 id="a">Keiのブログ | HOME</h1>
+        <h1>Keiのブログ | HOME</h1>
         <div id="table">
-            <a href="#a">・Keiブログとは</a>
-            <a href="#b">・運営者紹介</a>
-            <a href="#c">・記事一覧</a>
+            <a href="#a">・Keiブログとは</a><br>
+            <a href="#b">・運営者紹介</a><br>
+            <a href="#c">・記事一覧</a><br>
         </div>
+        <h1 id="a">Keiブログとは</h1>
         <p>このページはKeiが初めてインターネットに公開したブログであり、</p>
         <p>これから作られていくKeiのブログの<span class="strong">総本山</span>であり</p>
         <p>それらのページの<span class="strong">HOME</span>となるものである</p>
