--- a/01/index.html
+++ b/01/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00"><h1>[中１数学]-[一次方程式] | Kei備忘録</h1></a>
+    <h1>[中１数学]-[一次方程式] | Kei備忘録</h1>
     <p>Keiブログ1ページ目として選んだものは中１の数学</p>
     <p>今やっているその前の単元である一次方程式の解き方を</p>
     <p>2学期期末テストに向けて記録として残しておこう</p>
