--- a/01/index.html
+++ b/01/index.html
@@ -11,7 +11,13 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <h1>[中１数学]-[一次方程式] | Kei備忘録</h1>
+    <a href="https://kei-glasses.github.io/HTML/00" style="color=black"><h1>[中１数学]-[一次方程式] | Kei備忘録</h1></a>
+    <div id="table">
+      <a href="#a">記念すべき、1ページ目は...</a><br>
+      <a href="#b">7x , 9x</a><br>
+      <a href="#c">移項</a><br>
+      <a href="#d">文字の項、数の項</a><br>
+    <h1 id="a">記念すべき、1ページ目は...</h1>
     <p>Keiブログ1ページ目として選んだものは中１の数学</p>
     <p>今やっているその前の単元である一次方程式の解き方を</p>
     <p>2学期期末テストに向けて記録として残しておこう</p>
@@ -25,7 +31,7 @@
     </div>
     <p>この方程式は解き方がわかっていれば簡単なのですが、</p>
     <p>この解き方を忘れてしまうといけないので、自分なりにまとめていきます.</p>
-    <h3>7x , 9x</h3>
+    <h3 id="b">7x , 9x</h3>
     <p><br>まずは、最初の「7x」「9x」。</p>
     <p>これは、それぞれ「7 × x」「9 × x」のことを表しています。</p>
     <p>文字を使った項では</p>
@@ -33,7 +39,7 @@
     <p>・割り算は÷を書かずに、分数で表す</p>
     <p>という、ルールがあります。</p>
     <p>なので×を省略して、7x , 9xのように表します。  </p>
-    <h3>移項</h3>
+    <h3 id="c">移項</h3>
     <p>一行目の「7x + 6 = 9x - 16」と、</p>
     <p>二行目の「7x -9x = -6 -16」を比べてみましょう。</p>
     <div class="code">
@@ -69,7 +75,7 @@
       <p>7x -9x = -6 -16<p>
     </div>
     <p>何をしているのかが分かったと思います。</p>
-    <h3>文字の項、数の項</h3>
+    <h3 id="d">文字の項、数の項</h3>
     <p>前の章で「7x -9x = -6-16」のところまでたどり着けました。</p>
     <p>この等式の中の項は「7x」「-9x」「-6」「-16」です。</p>
     <p>文字と係数がある項は、「文字の項」、</p>
