--- a/00/index.html
+++ b/00/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <script src="../foreground.js"></script>
-        <h1>Keiのブログ | HOME</h1>
+        <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Keiのブログ | HOME</h1></a>
         <div id="table">
             <a href="#a">・Keiブログとは</a><br>
             <a href="#b">・運営者紹介</a><br>
