--- a/01/index.html
+++ b/01/index.html
@@ -13,10 +13,10 @@
     <script src="../foreground.js"></script>
     <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>[中１数学]-[一次方程式] | Kei備忘録</h1></a>
     <div id="table">
-      <a href="#a">記念すべき、1ページ目は...</a><br>
-      <a href="#b">7x , 9x</a><br>
-      <a href="#c">移項</a><br>
-      <a href="#d">文字の項、数の項</a><br>
+      <a href="#a">・記念すべき、1ページ目は...</a><br>
+      <a href="#b">・7x , 9x</a><br>
+      <a href="#c">・移項</a><br>
+      <a href="#d">・文字の項、数の項</a><br>
     <h1 id="a">記念すべき、1ページ目は...</h1>
     <p>Keiブログ1ページ目として選んだものは中１の数学</p>
     <p>今やっているその前の単元である一次方程式の解き方を</p>
