--- a/01/index.html
+++ b/01/index.html
@@ -17,6 +17,7 @@
       <a href="#b">・7x , 9x</a><br>
       <a href="#c">・移項</a><br>
       <a href="#d">・文字の項、数の項</a><br>
+    </div>
     <h1 id="a">記念すべき、1ページ目は...</h1>
     <p>Keiブログ1ページ目として選んだものは中１の数学</p>
     <p>今やっているその前の単元である一次方程式の解き方を</p>
