--- a/01/index.html
+++ b/01/index.html
@@ -97,5 +97,40 @@
     <div class="code">
       <p>-6 -16 = -22</p>
     </div>
+    <h3 id="d">xの値を求める</h3>
+    <p>ここまでくればもう少しでこの方程式をとけます</p>
+    <div class="code">
+      <p> -2x = -22</p>
+    </div>
+    <p>最後にxの値を求めようと思います。</p>
+    <p>「-2x」と「-22」が等しいのであれば、</p>
+    <p>両辺を0でない、同じ数で割っても等式の関係は</p>
+    <p>崩れません。ここでは、両辺を-2で割ります。</p>
+    <p>すると左辺の係数「-2」が1になり、省くことができるようになります。</p>
+    <p>すると割られた左辺の値はxの値と等しくなります。<p>
+    <p>では-2で両辺を割り、xの値を求めてみましょう。</p>
+    <div class="code">
+      <p>-2x = -22</p>
+      <p>x = 11</p>
+    </div>
+    <p>xの値を求めることができました。</p>
+    <h3 id="e">まとめ</h3>
+    <p>このようにして「7x+6 = 9x-16」の式でのxの値を求めることができました。</p>
+    <p>手順として...</p>
+    <div class="code">
+      <p>1. 移項する</p>
+      <p>2. 左辺をまとめる</p>
+      <p>3. 右辺をまとめる</p>
+      <p>4. xの係数で両辺を割って、xの値を求める。</p>
+    </div>
+    <p>一次方程式の解き方を忘れたときは、上記の方法で</p>
+    <p>解いてみて、やり方を思い出して見てください!</p>
+    <p>では、記念すべきKeiブログ1ページ目は、</p>
+    <p>この辺で。</p>
+    <div style=background:#1a21db>
+      <br>
+      <p>2024 #Kei</p>
+      <br>
+    </div>
   </body>
 </html>
