--- a/01/index.html
+++ b/01/index.html
@@ -103,7 +103,7 @@
       <p> -2x = -22</p>
     </div>
     <p>最後にxの値を求めようと思います。</p>
-    <p>「-2x」と「-22」が等しいのであれば、</p>
+    <p>「-2x」と「-22」が等しいので、</p>
     <p>両辺を0でない、同じ数で割っても等式の関係は</p>
     <p>崩れません。ここでは、両辺を-2で割ります。</p>
     <p>すると左辺の係数「-2」が1になり、省くことができるようになります。</p>
