--- a/01/index.html
+++ b/01/index.html
@@ -106,7 +106,7 @@
     <p>「-2x」と「-22」が等しいので、</p>
     <p>両辺を0でない、同じ数で割っても等式の関係は</p>
     <p>崩れません。ここでは、両辺を-2で割ります。</p>
-    <p>すると左辺の係数「-2」が1になり、省くことができるようになります。</p>
+    <p>すると「-2x」の係数「-2」が1になり、省くことができるようになります。</p>
     <p>すると割られた左辺の値はxの値と等しくなります。<p>
     <p>では-2で両辺を割り、xの値を求めてみましょう。</p>
     <div class="code">
