--- a/01/index.html
+++ b/01/index.html
@@ -127,10 +127,8 @@
     <p>解いてみて、やり方を思い出して見てください!</p>
     <p>では、記念すべきKeiブログ1ページ目は、</p>
     <p>この辺で。</p>
-    <div style=background:#1a21db>
-      <br>
+    <div style=background:#3b1d82>
       <p>2024 #Kei</p>
-      <br>
     </div>
   </body>
 </html>
