--- a/01/index.html
+++ b/01/index.html
@@ -17,6 +17,8 @@
       <a href="#b">・7x , 9x</a><br>
       <a href="#c">・移項</a><br>
       <a href="#d">・文字の項、数の項</a><br>
+      <a href="#e">・xの値を求める</a><br>
+      <a href="#f">・まとめ</a><br>
     </div>
     <h1 id="a">記念すべき、1ページ目は...</h1>
     <p>Keiブログ1ページ目として選んだものは中１の数学</p>
@@ -97,7 +99,7 @@
     <div class="code">
       <p>-6 -16 = -22</p>
     </div>
-    <h3 id="d">xの値を求める</h3>
+    <h3 id="e">xの値を求める</h3>
     <p>ここまでくればもう少しでこの方程式をとけます</p>
     <div class="code">
       <p> -2x = -22</p>
@@ -114,7 +116,7 @@
       <p>x = 11</p>
     </div>
     <p>xの値を求めることができました。</p>
-    <h3 id="e">まとめ</h3>
+    <h3 id="f">まとめ</h3>
     <p>このようにして「7x+6 = 9x-16」の式でのxの値を求めることができました。</p>
     <p>手順として...</p>
     <div class="code">
