--- a/01/index.html
+++ b/01/index.html
@@ -129,5 +129,8 @@
     <p>解いてみて、やり方を思い出して見てください!</p>
     <p>では、記念すべきKeiブログ1ページ目は、</p>
     <p>この辺で。</p>
+    <div style=background:#ffd700>
+      <a href="https://kei-glasses.github.io">HOMEへ</a>
+    </div>
   </body>
 </html>
