--- a/02/index.html
+++ b/02/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  
-</head>
-<body>
-  
-</body>
+  <head>
+    <title>自分的備忘録-2[]</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../glasses.png">
+    <script src="../background.js"></script>
+    <style>
+        body { background : #ffd }
+    </style>
+  </head>
+  <body>
+  </body>
 </html>
