--- a/02/index.html
+++ b/02/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>自分的備忘録-2[]</title>
+    <title>自分的備忘録-2[その他]</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../glasses.png">
@@ -11,5 +11,6 @@
     </style>
   </head>
   <body>
+    <a href="https://kei-glasses.github.io"><h1>[悲報] | Kei備忘録</h1></a>
   </body>
 </html>
