--- a/01/index.html
+++ b/01/index.html
@@ -130,7 +130,7 @@
     <p>では、記念すべきKeiブログ1ページ目は、</p>
     <p>この辺で。</p>
     <div style=background:#ffd700>
-      <a href="https://kei-glasses.github.io">HOMEへ</a>
+      <a href="https://kei-glasses.github.io/HTML/00">HOMEへ</a>
     </div>
   </body>
 </html>
