--- a/02/index.html
+++ b/02/index.html
@@ -11,6 +11,7 @@
     </style>
   </head>
   <body>
-    <a href="https://kei-glasses.github.io"><h1>[悲報] | Kei備忘録</h1></a>
+    <a href="https://kei-glasses.github.io/HTML/00"><h1>[悲報] | Kei備忘録</h1></a>
+    <h1 id="a">キーボードを...</h1>
   </body>
 </html>
