--- a/404.html
+++ b/404.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-</body>
+    <head>
+        <title>Keiのブログ | 404</title>
+        <meta charset="UTF-8">
+        <link rel="icon" href="../glasses.png">
+    </head>
+    <body>
+      <p>ここにはKeiのページはありません。</p>
+      <p>KeiブログのHOMEは<a href="https://kei-glasses.github.io/HTML/00">こちら</a></p>
+    </body>
+</html>
