--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
         <title>Keiのブログ | 404</title>
         <meta charset="UTF-8">
         <link rel="icon" href="../glasses.png">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
       <p>ここにはKeiのページはありません。</p>
