--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="icon" href="../glasses.png">
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="./glasses.png">
     </head>
     <body>
       <p>ここにはKeiのページはありません。</p>
