--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
         <title>Keiのブログ | 404</title>
         <meta charset="UTF-8">
         <link rel="icon" href="../glasses.png">
-        <link rel="stylesheet" href="./style.css">
+        <style>
+            p { font-size : 75px}
+        </style>
         <link rel="icon" href="./glasses.png">
     </head>
     <body>
