--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         <link rel="icon" href="./glasses.png">
     </head>
     <body>
-        <h1>            404            </h1>
+      <div style="font-size:100px"><h1>            404            </h1></div>
       <p>ここにはKeiのページはありません。</p>
       <p>KeiブログのHOMEは<a href="https://kei-glasses.github.io/HTML/00">こちら</a></p>
     </body>
