--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="../glasses.png">
         <style>
             p { font-size : 75px}
+            body { background-color : #ffd700 }
         </style>
         <link rel="icon" href="./glasses.png">
     </head>
