--- a/02/index.html
+++ b/02/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Keiのブログ | HOME</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
+        <link rel="icon" href="../glasses.png">
+        <script src="../background.js"></script>
+        <style>
+        </style>
+    </head>
+    <body>
+      <OBJECT DATA="./test.txt"TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
+    </body>
+</html>
