--- a/02/index.html
+++ b/02/index.html
@@ -2,15 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Keiのブログ | HOME</title>
+        <title>Keiのブログ | 自作インタプリタ言語 "kbf"</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
         <link rel="icon" href="../glasses.png">
-        <script src="../background.js"></script>
+        <script src="../background.js">
+        </script>
         <style>
         </style>
     </head>
     <body>
-      <OBJECT DATA="./test.txt" TYPE="text/plain" WIDTH="100%" HEIGHT="100%"></OBJECT>
+        <a href="https://kei-glasses.github.io/HTML/00/"><h1>Keiのブログ | 自作インタプリタ言語 "kbf"</h1></a>
     </body>
 </html>
