--- a/00/index.html
+++ b/00/index.html
@@ -44,5 +44,9 @@
         <p><br><br>...ま、がんばります</p>
         <h1 id="c">記事一覧</h1>
         <a href="https://kei-glasses.github.io/HTML/01">自分的備忘録-1[数学]</a>
+        <div class="code">
+        <p>This repository is where my website is located. Administrator : Kei-Glasses.
+このリポジトリは私のウェブサイトがある場所です。管理者: Kei-Glasses。
+        </p></div>
     </body>
 </html>
