--- a/01/index.html
+++ b/01/index.html
@@ -58,7 +58,7 @@
       <p>7x <span class="strong">-9x</span> = 9x <span class="strong">-9x</span> -16 -6</p>
       <p>7x -9x = -6 -16</p>
     </div>
-    <p>赤の部分は上の一行目と二行目の間で起こったことをわかりやすくするためです。</p>
+    <p>赤の部分は上の一行目と二行目の間で起こったことをわかりやすくするためのものです。</p>
     <p>「7x + 6 = 9x -16」の両辺の間には「=」があります。</p>
     <p>つまりこれは、「7x +6」と「9x -16」が等しいことを表します。</p>
     <p>両辺が等しいのであれば、両辺に、</p>
