--- a/01/index.html
+++ b/01/index.html
@@ -62,11 +62,11 @@
     <p>「7x + 6 = 9x -16」の両辺の間には「=」があります。</p>
     <p>つまりこれは、「7x +6」と「9x -16」が等しいことを表します。</p>
     <p>両辺が等しいのであれば、両辺に、</p>
-    <p>・同じ数を足す</p>
-    <p>・同じ数を引く</p>
-    <p>・同じ数を掛ける</p>
-    <p>・0ではない同じ数で割る</p>
-    <p>しても等式の関係は崩れません。</p>
+    <p>「同じ数を足す」をしても、</p>
+    <p>「同じ数を引く」をしても、</p>
+    <p>「同じ数を掛ける」をしても、</p>
+    <p>「0ではない同じ数で割る」をしても、</p>
+    <p>等式の関係は崩れません。</p>
     <p>そこで、二行目では両辺に-6して、左辺の6を相殺し、</p>
     <p>四行目では両辺に-9xして、右辺の9xを相殺しています。</p>
     <p>すると反対側の辺では符号を逆にした数があることになり、</p>
