--- a/01/index.html
+++ b/01/index.html
@@ -126,7 +126,7 @@
       <p>4. xの係数で両辺を割って、xの値を求める。</p>
     </div>
     <p>一次方程式の解き方を忘れたときは、上記の方法で</p>
-    <p>解いてみて、やり方を思い出して見てください!</p>
+    <p>解いてみて、やり方を思い出してみてください!</p>
     <p>では、記念すべきKeiブログ1ページ目は、</p>
     <p>この辺で。</p>
     <div style=background:#ffd700>
