--- a/02/index.html
+++ b/02/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>自作ﾃﾞｪｪｪｪﾝ</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../glasses.png">
+    <script src="../background.js"></script>
+    <style>
+            body { background : #ffd }
+            #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
+      </style>
+  </head>
+  <body>
+    <script src="../foreground.js"></script>
+    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Keiのブログ | HOME</h1></a>
+    <div id="table">
+    </div>
+    <h1 id="b">使用音源一覧</h1>
+    <h2>USSR_Anthem_-_1977.ogg</h2>
+    <p>ページURL:</p><a>https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</a>
+    <p>ファイルURL:</p><a>https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a>
+    <a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a><p>, ウィキメディア・コモンズ経由で</p>
+    <iframe src="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg?embedplayer=yes" width="300" height="20" frameborder="0" loading="lazy" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
+  </body>
+</html>
