--- a/02/index.html
+++ b/02/index.html
@@ -19,9 +19,9 @@
     <h1 id="b">使用音源一覧</h1>
     
     <h4>・USSR_Anthem_-_1977.ogg</h4>
-    <a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">ページURL</a>
-    <a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">ファイルURL</a>
-    <p>著作権者表示：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0, ウィキメディア・コモンズ経由で</a>
+    <p>ページURL:<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</a></p>
+    <p>ファイルURL:<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
+    <p>著作権者表示：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0, ウィキメディア・コモンズ経由で</a></p>
     <iframe src="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg?embedplayer=yes" width="300" height="20" frameborder="0" loading="lazy" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
     
   </body>
