--- a/02/index.html
+++ b/02/index.html
@@ -3,12 +3,16 @@
   <head>
     <title>自作ﾃﾞｪｪｪｪﾝ</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
     <style>
-            body { background : #ffd }
-            #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
+      body { background : #CD0000 }
+      h1 { font-size : 60px ; text-align : center ; background : #1b70bf }
+      #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
+      p { font-size : 40px }
+      .strong { color : red }
+      a { font-size : 53px }
+      #table { background : #8ced05 }
       </style>
   </head>
   <body>
