--- a/02/index.html
+++ b/02/index.html
@@ -7,11 +7,11 @@
     <script src="../background.js"></script>
     <style>
       body { background : #CD0000 }
-      h1 { font-size : 60px ; text-align : center ; background : #1b70bf }
+      h1 { font-size : 60px ; text-align : center ; background : #FFD700 }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 40px }
+      p { font-size : 30px }
       .strong { color : red }
-      a { font-size : 53px }
+      a { font-size : 30px }
       #table { background : #8ced05 }
       </style>
   </head>
@@ -22,7 +22,7 @@
     </div>
     <h1 id="b">使用音源一覧</h1>
     
-    <h4>・USSR_Anthem_-_1977.ogg</h4>
+    <h2>・USSR_Anthem_-_1977.ogg</h2>
     <p>ページURL:<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</a></p>
     <p>ファイルURL:<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
     <p>著作権者表示：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0, ウィキメディア・コモンズ経由で</a></p>
