--- a/02/index.html
+++ b/02/index.html
@@ -9,9 +9,9 @@
       body { background : #CD0000 }
       h1 { font-size : 60px ; text-align : center ; background : #FFD700 }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 30px }
+      p { font-size : 30px ; color : #fff }
       .strong { color : red }
-      a { font-size : 30px }
+      a { font-size : 30px ; color : #000 }
       #table { background : #8ced05 }
       </style>
   </head>
