--- a/02/index.html
+++ b/02/index.html
@@ -6,12 +6,12 @@
     <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
     <style>
-      body { background : #CD0000 }
-      h1 { font-size : 60px ; text-align : center ; background : #FFD700 }
+      body { background : #ffd700 }
+      h1 { font-size : 60px ; text-align : center ; background : #CD0000 }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 30px ; color : #fff }
+      p { font-size : 30px ; color : #00f }
       .strong { color : red }
-      a { font-size : 30px ; color : #000 }
+      a { font-size : 30px ; }
       #table { background : #8ced05 }
       </style>
   </head>
