--- a/02/index.html
+++ b/02/index.html
@@ -7,11 +7,12 @@
     <script src="../background.js"></script>
     <style>
       body { background : #ffd700 }
-      h1 { font-size : 60px ; text-align : center ; background : #CD0000 }
+      h1 { font-size : 60px ; text-align : center ; }
+      h2 { font-size : 55px ; text-align : left ; }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
       p { font-size : 30px ; color : #00f }
       .strong { color : red }
-      a { font-size : 30px ; }
+      a { font-size : 30px ; color : #ffffff }
       #table { background : #8ced05 }
       </style>
   </head>
