--- a/02/index.html
+++ b/02/index.html
@@ -6,13 +6,13 @@
     <link rel="icon" href="../glasses.png">
     <script src="../background.js"></script>
     <style>
-      body { background : #ffd700 }
-      h1 { font-size : 60px ; text-align : center ; }
-      h2 { font-size : 55px ; text-align : left ; }
+      body { background : #000 }
+      h1 { font-size : 60px ; text-align : center ; background : #808080 }
+      h2 { font-size : 55px ; text-align : left ; color : #ffd700 }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
       p { font-size : 30px ; color : #00f }
       .strong { color : red }
-      a { font-size : 30px ; color : #ffffff }
+      a { font-size : 30px ; color : #cd0000 }
       #table { background : #8ced05 }
       </style>
   </head>
@@ -27,7 +27,6 @@
     <p>ページURL:<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</a></p>
     <p>ファイルURL:<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
     <p>著作権者表示：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0, ウィキメディア・コモンズ経由で</a></p>
-    <p></p>
     <iframe src="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg?embedplayer=yes" width="300" height="20" frameborder="0" loading="lazy" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
     
   </body>
