--- a/02/index.html
+++ b/02/index.html
@@ -7,7 +7,7 @@
     <script src="../background.js"></script>
     <style>
       body { background : #000 }
-      h1 { font-size : 60px ; text-align : center ; background : #808080 }
+      h1 { font-size : 60px ; text-align : center ; background : #fff }
       h2 { font-size : 55px ; text-align : left ; color : #ffd700 }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
       p { font-size : 30px ; color : #00f }
