--- a/02/index.html
+++ b/02/index.html
@@ -23,14 +23,8 @@
     </div>
     <h1 id="b">使用音源一覧</h1>
     
-    <h2>・USSR_Anthem_-_1977.ogg</h2>
-    <p>ページURL:<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg</a></p>
-    <p>ファイルURL:<a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg</a></p>
-    <p>著作権者表示：<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a><a href="https://creativecommons.org/licenses/by-sa/4.0">, CC BY-SA 4.0, ウィキメディア・コモンズ経由で</a></p>
-    <br>
-    <br>
-    <br>
-    <iframe src="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg?embedplayer=yes" width="300" height="20" frameborder="0" loading="lazy" allow="autoplay; picture-in-picture" allowfullscreen></iframe>
-    
+    <h2>・USSR_Anthem - 1977.ogg</h2>
+    <audio controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
+    <p>"USSR Anthem - 1977.ogg" by Olo19 is licensed under CC BY-SA 4.0 国際</p>
   </body>
 </html>
