--- a/02/index.html
+++ b/02/index.html
@@ -25,7 +25,6 @@
     
     <h2>・USSR_Anthem - 1977.ogg</h2>
     <audio controls src="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg"></audio>
-    <p>"USSR Anthem - 1977.ogg" by Olo19 is licensed under CC BY-SA 4.0 国際</p>
-    <p><a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, ウィキメディア・コモンズ経由で</p>
+    <p><a href="https://upload.wikimedia.org/wikipedia/commons/7/7d/USSR_Anthem_-_1977.ogg">USSR Anthem - 1977.ogg</a>,<a href="https://commons.wikimedia.org/wiki/File:USSR_Anthem_-_1977.ogg">Olo 19</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, <a>ウィキメディア・コモンズ経由で</a></p>
   </body>
 </html>
