--- a/02/index.html
+++ b/02/index.html
@@ -4,16 +4,15 @@
     <title>自作ﾃﾞｪｪｪｪﾝ</title>
     <meta charset="UTF-8">
     <link rel="icon" href="../glasses.png">
+    <link rel="stylesheet" href="../style.css">
     <script src="../background.js"></script>
     <style>
       body { background : #000 }
-      h1 { font-size : 40px ; text-align : center ; background : #fff }
-      h2 { font-size : 35px ; text-align : left ; color : #ffd700 }
+      h1 { font-size : 40px }
+      h2 { font-size : 35px }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 25px ; color : #00f }
-      .strong { color : red }
+      p { font-size : 25px }
       a { font-size : 25px ; color : #cd0000 }
-      #table { background : #8ced05 }
       </style>
   </head>
   <body>
