--- a/02/index.html
+++ b/02/index.html
@@ -8,7 +8,7 @@
     <script src="../background.js"></script>
     <style>
       body { background : #000 }
-      h1 { font-size : 40px }
+      h1 { font-size : 40px ; color : #ffd700}
       h2 { font-size : 35px }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
       p { font-size : 25px }
