--- a/02/index.html
+++ b/02/index.html
@@ -11,7 +11,7 @@
       h1 { font-size : 40px ; color : #ffd700}
       h2 { font-size : 35px }
       #introduction { TEXT-ALIGN : center ; background : #d0d0d0 ; font-size : 50px}
-      p { font-size : 25px }
+      p { font-size : 25px ; color : #00f}
       a { font-size : 25px ; color : #cd0000 }
       </style>
   </head>
