--- a/01/index.html
+++ b/01/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script src="../foreground.js"></script>
-    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>[中１数学]-[一次方程式] | Kei備忘録</h1></a>
+    <a href="https://kei-glasses.github.io/HTML/00" style="color:black"><h1>Kei備忘録</h1></a>
     <div id="table">
       <a href="#a">・記念すべき、1ページ目は...</a><br>
       <a href="#b">・7x , 9x</a><br>
